tests/files/type_checker_tests/should_pass/361.cmdr
//Should typecheck changing an array inside of a function
fn add(a) { a[0] += 1; }