tests/files/type_checker_tests/should_fail/212.cmdr
//Should fail due to uninitialized array
a[1] = 3;